[package]
name = "deezpatch"
version = "0.1.0"
authors = ["Daniel Etuk <dannetuk@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "deezpatch"

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
actix-web = "4"
config = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
